--- a/Server/WOC_Server/WOC_Server.csproj
+++ b/Server/WOC_Server/WOC_Server.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WOC_Network\WOC_Network.csproj" />
+  </ItemGroup>
+
 </Project>
