--- a/Server/WOC_Server/WOC_Server.csproj
+++ b/Server/WOC_Server/WOC_Server.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountHandler.cs" />
+    <Compile Include="AccountsHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="server.cs" />
