--- a/Server/WOC_Network/WOC_Network.csproj
+++ b/Server/WOC_Network/WOC_Network.csproj
@@ -53,4 +53,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy /Y "$(TargetDir)$(TargetName).dll" "$(SolutionDir)\..\Assets\$(TargetName).dll"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
