--- a/Server/WOC_Network/WOC_Network.csproj
+++ b/Server/WOC_Network/WOC_Network.csproj
@@ -44,11 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PacketData.cs" />
-    <Compile Include="PacketDataAccount.cs" />
-    <Compile Include="PacketDataDeck.cs" />
+    <Compile Include="src\Account.cs" />
+    <Compile Include="src\Connection.cs" />
+    <Compile Include="src\PacketData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TcpServer.cs" />
+    <Compile Include="src\Session.cs" />
+    <Compile Include="src\Client.cs" />
+    <Compile Include="src\Server.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
