--- a/Server/WOC_Server/WOC_Server.csproj
+++ b/Server/WOC_Server/WOC_Server.csproj
@@ -46,10 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountsHandler.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="src\AccountsHandler.cs" />
+    <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="server.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
