--- a/Server/ClientPlayground/ClientPlayground.csproj
+++ b/Server/ClientPlayground/ClientPlayground.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\Client.cs" />
+    <Compile Include="src\ClientSideSession.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
