--- a/Server/WOC_Server/WOC_Server.csproj
+++ b/Server/WOC_Server/WOC_Server.csproj
@@ -49,6 +49,8 @@
     <Compile Include="src\AccountsHandler.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Server.cs" />
+    <Compile Include="src\ServerSideSession.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
