--- a/Server/WOC_Server/WOC_Server.csproj
+++ b/Server/WOC_Server/WOC_Server.csproj
@@ -60,7 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\AccountsHandler.cs" />
+    <Compile Include="src\BattleInstance.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Server.cs" />
