--- a/Server/WOC_Network/WOC_Network.csproj
+++ b/Server/WOC_Network/WOC_Network.csproj
@@ -48,6 +48,7 @@
     <Compile Include="src\PacketData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Session.cs" />
+    <Compile Include="src\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
