server & client : improved version. needs some cleanup

--- a/WOC/NetworkClientPlayground/NetworkClientPlayground.csproj
+++ b/WOC/NetworkClientPlayground/NetworkClientPlayground.csproj
@@ -43,11 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="NetworkClientPlayground.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WOC_Core\WOC_Core.csproj">
+      <Project>{0c336064-8b9c-4289-b08a-1911317ef02e}</Project>
+      <Name>WOC_Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
