integrated session in server and client

--- a/WOC/WOC_Core/WOC_Core.csproj
+++ b/WOC/WOC_Core/WOC_Core.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\Debug.cs" />
     <Compile Include="src\Network\Account.cs" />
     <Compile Include="src\Network\PacketData.cs" />
     <Compile Include="src\Network\Session.cs" />
