moved battle to core

--- a/WOC/WOC_Core/WOC_Core.csproj
+++ b/WOC/WOC_Core/WOC_Core.csproj
@@ -44,6 +44,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="src\Battle\Actor\Actor.cs" />
+    <Compile Include="src\Battle\Actor\PlayerActor.cs" />
+    <Compile Include="src\Battle\Actor\PNJActor.cs" />
+    <Compile Include="src\Battle\Aggro.cs" />
+    <Compile Include="src\Battle\Battle.cs" />
+    <Compile Include="src\Battle\CardPile.cs" />
+    <Compile Include="src\Battle\Card\Card.cs" />
+    <Compile Include="src\Battle\Card\CardEffect.cs" />
+    <Compile Include="src\Battle\Card\Effect\CardEffectDamage.cs" />
+    <Compile Include="src\Battle\Card\Effect\CardEffectDiscard.cs" />
+    <Compile Include="src\Battle\Card\Effect\CardEffectDraw.cs" />
+    <Compile Include="src\Battle\Card\Effect\CardEffectHeal.cs" />
+    <Compile Include="src\Battle\Character.cs" />
+    <Compile Include="src\Battle\Hand.cs" />
+    <Compile Include="src\Battle\Initiative.cs" />
+    <Compile Include="src\Battle\Mana.cs" />
+    <Compile Include="src\Battle\Race.cs" />
     <Compile Include="src\Debug.cs" />
     <Compile Include="src\Network\Account.cs" />
     <Compile Include="src\Network\PacketData.cs" />
