--- a/WOC/NetworkClientPlayground/NetworkClientPlayground.csproj
+++ b/WOC/NetworkClientPlayground/NetworkClientPlayground.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientSession.cs" />
-    <Compile Include="NetworkClientPlayground.cs" />
+    <Compile Include="Playground.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
