reworked server communication API, needs implementation now

--- a/WOC/WOC_Core/WOC_Core.csproj
+++ b/WOC/WOC_Core/WOC_Core.csproj
@@ -62,6 +62,7 @@
     <Compile Include="src\Battle\Mana.cs" />
     <Compile Include="src\Battle\Race.cs" />
     <Compile Include="src\Debug.cs" />
+    <Compile Include="src\Game\User.cs" />
     <Compile Include="src\Network\PacketData.cs" />
     <Compile Include="src\Network\Session.cs" />
     <Compile Include="src\Serialization\Serialization.cs" />
