--- a/WOC/WOC_Server/WOC_Server.csproj
+++ b/WOC/WOC_Server/WOC_Server.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\BattleRoom.cs" />
+    <Compile Include="src\Room.cs" />
     <Compile Include="src\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Server.cs" />
