combat loop kinda operationnal

--- a/WOC/WOC_Server/WOC_Server.csproj
+++ b/WOC/WOC_Server/WOC_Server.csproj
@@ -51,7 +51,7 @@
     <Compile Include="src\Game\CardEffect.cs" />
     <Compile Include="src\Game\Hand.cs" />
     <Compile Include="src\Game\Monster.cs" />
-    <Compile Include="src\Game\BattlePlayer.cs" />
+    <Compile Include="src\Game\Player.cs" />
     <Compile Include="src\Game\Combatant.cs" />
     <Compile Include="src\Game\Battle.cs" />
     <Compile Include="src\Program.cs" />
