--- a/WOC/WOC_Core/WOC_Core.csproj
+++ b/WOC/WOC_Core/WOC_Core.csproj
@@ -44,16 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="src\Battle\Actor\Actor.cs" />
-    <Compile Include="src\Battle\Actor\PlayerActor.cs" />
-    <Compile Include="src\Battle\Actor\PNJActor.cs" />
     <Compile Include="src\Battle\old\Aggro.cs" />
-    <Compile Include="src\Battle\Battle.cs" />
-    <Compile Include="src\Battle\CardPile.cs" />
-    <Compile Include="src\Battle\Card\Card.cs" />
-    <Compile Include="src\Battle\Card\Effect\CardEffectDiscard.cs" />
+    <Compile Include="src\Battle\Card.cs" />
     <Compile Include="src\Battle\old\Character.cs" />
-    <Compile Include="src\Battle\Hand.cs" />
     <Compile Include="src\Battle\old\Initiative.cs" />
     <Compile Include="src\Battle\old\Mana.cs" />
     <Compile Include="src\Game\Account.cs" />
